2011-03-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tardate.ac: Switch to 2011-03-03.

2011-02-16  Karl Berry  <karl@tug.org>

	* Build: include uname -a in log, mention log if failure.

2011-01-19  Karl Berry  <karl@tug.org>

	* Build: don't try to count binaries if no bindir.	

2010-10-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tardate.ac (new): Define the current TeX Live tarball version.
	* version.ac: Switch to 2011/dev.

2010-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* version.ac (new): Define the current TeX Live version.

2010-05-18  Karl Berry  <karl@tug.org>

	* Build (TL_CONF_BANNER): switch ident to /pretest.

2010-04-11  Karl Berry  <karl@tug.org>

	* m4/kpse-pkgs.m4 (KPSE_TEXK_PKGS): add ptexenc, makejvf, mendexk.
	From Akira and Norbert.
	* m4/kpse-ptexenc-flags.m4: new file.

2010-03-29  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* m4/kpse-icu-flags.m4 (KPSE_ICU_SYSTEM_FLAGS): Work around bug
	in icu-config version 4.4.
	* m4/kpse-common.m4 (KPSE_COMMON): Added AC_TYPE_SIZE_T.

2010-03-24  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Build (TL_CONF_THREADS): Removed, now in libs/icu/configure.

2010-03-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (triptrap): Run intermediate triptrap target in
	 texk/, texk/web2c/Makefile might not yet exist.

2010-03-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (triptrap): New target to run TRIP and TRAP tests.
	Do not automatically run 'make check' when cross compiling.

2010-03-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, configure.ac: Do not automatically run tests as
	part of 'make world' when cross compiling.

2010-02-22  Karl Berry  <karl@tug.org>

	* Build (TL_CONF_BANNER): 2010/dev.

2010-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* m4/kpse-common.m4 (KPSE_COMMON): Use LT_INIT([win32-dll]).
	* m4/kpse-gd-flags.m4 (KPSE_GD_FLAGS): Add -DNONDLL.

2010-02-12  Peter Breitenlohner  <peb@mppmu.mpg.de>
