@@ -1,3 +1,8 @@
+2011-03-07  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* m4/kpse-common.m4 (KPSE_COMMON): Remove check for
+	program_invocation_name.
+
 2011-03-03  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* tardate.ac: Switch to 2011-03-03.
